Changelog for ChatReplace (v1.2.2-SNAPSHOT)

2012-08-05 09:03:17 +0100    updated to bukkitutil 4.1.0 (James Richardson)
2012-08-05 08:38:14 +0100    update pom (James Richardson)

v1.2.1
2012-08-02 10:16:18 +0100    change log (James Richardson)
2012-08-02 10:14:21 +0100    switch from automatic to notify change to using parent pom (James Richardson)
2012-07-29 18:30:54 +0100    NPE accessing key (James Richardson)
2012-07-29 18:07:11 +0100    implement metrics (James Richardson)

v1.2.0
2012-06-30 13:28:47 +0100    preparing for release (James Richardson)
2012-06-30 13:15:28 +0100    change pattern count output to info from debug (James Richardson)
2012-06-30 13:14:29 +0100    update package name in plugin.yml (James Richardson)
2012-06-30 13:13:02 +0100    added and altered configuration files (James Richardson)
2012-06-30 13:10:29 +0100    copyright notices (James Richardson)
2012-06-30 13:08:04 +0100    add JavaDoc (James Richardson)
2012-06-30 13:07:26 +0100    source clean up (James Richardson)
2012-06-30 13:06:35 +0100    organise imports (James Richardson)
2012-06-30 13:05:56 +0100    register commands properly (James Richardson)
2012-06-30 13:04:40 +0100    added localisation and updated commands (James Richardson)
2012-06-30 12:53:52 +0100    update Listener (James Richardson)
2012-06-30 12:47:45 +0100    update loadFormatters (James Richardson)
2012-06-30 12:46:58 +0100    update SubstitutionPattern (James Richardson)
2012-06-30 12:38:32 +0100    update Patterns to use new storage. update Patterns to format using StringBuilder. (James Richardson)
2012-06-30 12:16:17 +0100    update majority of ChatReplace.java for new BukkitUtilities (James Richardson)
2012-06-30 12:09:01 +0100    dynamically update plugin version (James Richardson)
2012-06-30 12:08:09 +0100    update pom (James Richardson)
2012-06-30 12:04:38 +0100    updating layout to use Maven. (James Richardson)
2011-12-22 22:34:03 +0000    spelling again (James Richardson)