@@ -33,6 +33,8 @@ import name.richardson.james.bukkit.utilities.persistence.AbstractYAMLStorage;
 
 public class SubstitutionPatternConfiguration extends AbstractYAMLStorage implements PatternConfiguration {
 
+  public static final String FILE_NAME = "append.yml";
+  
   /** The patterns created from this configuration file. */
   private final List<SubstitutionPattern> patterns = new ArrayList<SubstitutionPattern>();
 
@@ -43,11 +45,12 @@ public class SubstitutionPatternConfiguration extends AbstractYAMLStorage implem
    * @param fileName the file name
    * @throws IOException Signals that an I/O exception has occurred.
    */
-  public SubstitutionPatternConfiguration(final ChatReplace plugin, final String fileName) throws IOException {
-    super(plugin, fileName);
+  public SubstitutionPatternConfiguration(final ChatReplace plugin) throws IOException {
+    super(plugin, FILE_NAME);
+    this.setDefaultPatterns();
     this.setPatterns();
   }
-
+  
   /*
    * (non-Javadoc)
    * @see
@@ -56,15 +59,8 @@ public class SubstitutionPatternConfiguration extends AbstractYAMLStorage implem
   public List<SubstitutionPattern> getPatterns() {
     return Collections.unmodifiableList((this.patterns));
   }
-
-  /**
-   * Sets the defaults.
-   * 
-   * @throws IOException Signals that an I/O exception has occurred.
-   */
-  @Override
-  protected void setDefaults(final InputStream resource) throws IOException {
-    super.setDefaults(resource);
+  
+  private void setDefaultPatterns() {
     if (this.getConfiguration().getKeys(false).isEmpty()) {
       this.getConfiguration().createSection("example-pattern");
       this.getConfiguration().getConfigurationSection("example-pattern").set("pattern", "(hello)");
