@@ -1,5 +1,8 @@
 Changelog for ChatReplace (v1.2.2-SNAPSHOT)
 
+2012-08-05 09:56:26 +0100    finished refactoring (James Richardson)
+2012-08-05 09:49:58 +0100    support async chat events (James Richardson)
+2012-08-05 09:24:40 +0100    will reimplement in a bit (James Richardson)
 2012-08-05 09:03:17 +0100    updated to bukkitutil 4.1.0 (James Richardson)
 2012-08-05 08:38:14 +0100    update pom (James Richardson)
 
